--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.data.structure</groupId>
     <artifactId>aligorithm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>aligorithm</name>
     <!-- FIXME change it to the project's website -->
